# CuraWeave

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py
backend/app/ai/: conversation_agent.py  langgraph_engine.py  langgraph_workflow.py  symptom_triage_graph.py
backend/app/api/: ai_routes.py  analytics_routes.py  appointment_routes.py  auth_patient_routes.py  auth_routes.py  billing_routes.py  campaign_routes.py  clinic_routes.py  patient_routes.py  webhooks.py
backend/app/integrations/: email_client.py  stripe_client.py  twilio_client.py
backend/app/models/: __init__.py  appointment.py  campaign.py  clinic.py  message.py  patient.py  patient_doctor_link.py  subscription.py  triage.py  user.py
backend/app/schemas/: __init__.py  appointment_schema.py  clinic_schema.py  message_schema.py  patient_schema.py
backend/app/services/: appointment_service.py  billing_service.py  campaign_service.py  clinic_service.py  messaging_service.py  patient_service.py  triage_service.py  user_service.py
backend/app/utils/: auth.py  helpers.py  security.py
backend/app/workers/: campaign_tasks.py  celery_worker.py  reminder_tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  PatientLayout.tsx
frontend/src/pages/: AiTriagePage.tsx  AppointmentsPage.tsx  BillingPage.tsx  CampaignsPage.tsx  DashboardPage.tsx  LandingPage.tsx  (+10 more)
(+2 files in other folders)
